--- a/views/repair/index.ejs
+++ b/views/repair/index.ejs
@@ -12,7 +12,8 @@
 
 <body class="container" style="margin-top: 50px;">
     <div class="d-flex justify-content-between align-items-center">
-        <h1>Hello Admin : <%= name %></h1>
+        <h1>Hello Admin : <%= name %>
+        </h1>
         <a href="/logout" class="btn btn-danger">Logout</a>
     </div>
     <div class="card">
