--- a/views/home.ejs
+++ b/views/home.ejs
@@ -86,9 +86,9 @@
                                 <% } %>
                             </td>
                             <td>
-                                <a href="../repair/detalis/<%= data[i].id %>" class="btn btn-primary"><i class='bx bx-detail'></i></a>
-                                <a href="../repair/edit/<%= data[i].id %>" class="btn btn-success"><i class='bx bx-edit'></i></a>
-                                <a href="../repair/delete/<%= data[i].id %>" onclick="return alert('Are you sure?')" class="btn btn-danger"><i class='bx bx-trash'></i></a>
+                                <!-- <a href="../repair/detalis/<%= data[i].repair_id %>" class="btn btn-primary"><i class='bx bx-detail'></i></a> -->
+                                <a href="../repair/edit/<%= data[i].repair_id %>" class="btn btn-success"><i class='bx bx-edit'></i></a>
+                                <a href="../repair/delete/<%= data[i].repair_id %>" onclick="return alert('Are you sure?')" class="btn btn-danger"><i class='bx bx-trash'></i></a>
                             </td>
                         </tr>
                         <% } %>
