--- a/views/repair/edit.ejs
+++ b/views/repair/edit.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>เพิ่มรายการเเจ้งซ่อม</title>
+    <title>แก้ใขรายการเเจ้งซ่อม</title>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -34,7 +34,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/repair">หน้าหลัก </a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a href="/repair/add" class="nav-link">เพิ่มรายการเเจ้งซ่อม <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
@@ -43,7 +43,7 @@
             </span>
         </div>
     </nav>
-    <section class="container" style="margin-top: 50px;">
+    <section class="container mb-3" style="margin-top: 50px;">
         <a href="/repair" class="btn btn-primary"><i class='bx bx-arrow-back'></i> Back</a>
         <br><br>
 
@@ -52,7 +52,7 @@
                 เพิ่มรายการเเจ้งซ่อม
             </div>
             <div class="card-body">
-                <form action="/repair/add" method="post" class="needs-validation" novalidate id="formA" enctype="multipart/form-data">
+                <form action="/repair/update/<%= repairs[0].repair_id %>" method="post" class="needs-validation" novalidate id="formA" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col">
                             <div class="form-group">
@@ -63,23 +63,18 @@
                         <div class="col">
                             <label for="exampleFormControlInput1">วัน/เวลาเเจ้งซ่อม</label>
                             <div class="input-group date">
-                                <input type="text" value="" id="datetime_repair" name="datetime_repair" class="form-control" required readonly>
+                                <input type="text" value="<%= repairs[0].datetime_repair %>" id="datetime_repair" name="datetime_repair" class="form-control" required readonly>
                                 <div class="input-group-addon input-group-append ">
                                     <div class="input-group-text">
                                         <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
                                     </div>
                                 </div>
                                 <script>
-                                    const date = new Date();
-                                    const dateStr =
-                                        date.getFullYear() + "-" +
-                                        ("00" + (date.getMonth() + 1)).slice(-2) + "-" +
-                                        ("00" + date.getDate()).slice(-2) + " " +
-                                        ("00" + date.getHours()).slice(-2) + ":" +
-                                        ("00" + date.getMinutes()).slice(-2) + ":" +
-                                        ("00" + date.getSeconds()).slice(-2);
-                                    // console.log(dateStr);
-                                    document.getElementById('datetime_repair').value = dateStr;
+                                    const dt = '<%= repairs[0].datetime_repair %>';
+                                    const date = new Date(dt);
+                                    const formattedDate = date.toISOString().substr(0, 19).replace('T', ' ');
+
+                                    document.getElementById('datetime_repair').value = formattedDate;
                                 </script>
                             </div>
                         </div>
@@ -89,11 +84,16 @@
                             <div class="form-group">
                                 <label for="exampleFormControlSelect1">เลือกอาคาร</label>
                                 <select class="form-control " id="exampleFormControlSelect1" name="buildings" required>
-                                    <option selected disabled hidden value="">เลือกอาคาร</option>
                                     <% for(let i=0; i < buildings.length; i++) { %>
+                                    <% if (buildings[i].id == repairs[0].building_id) { %>
+                                    <option value="<%= buildings[i].id %>" selected>
+                                        <%= buildings[i].building_name %>
+                                    </option>
+                                    <%} else { %>
                                     <option value="<%= buildings[i].id %>">
                                         <%= buildings[i].building_name %>
                                     </option>
+                                    <% } %>
                                     <% } %>
                                 </select>
                                 <div class="invalid-feedback">
@@ -105,11 +105,16 @@
                             <div class="form-group">
                                 <label for="exampleFormControlSelect1">เลือกห้อง</label>
                                 <select class="form-control" id="exampleFormControlSelect1" name="rooms" required>
-                                    <option selected disabled hidden value="">เลือกห้อง</option>
                                     <% for(let i=0; i < rooms.length; i++) { %>
+                                    <% if (rooms[i].id == repairs[0].room_id) { %>
+                                    <option value="<%= rooms[i].id %>" selected>
+                                        <%= rooms[i].room_name %>
+                                    </option>
+                                    <%} else { %>
                                     <option value="<%= rooms[i].id %>">
                                         <%= rooms[i].room_name %>
                                     </option>
+                                    <% } %>
                                     <% } %>
                                 </select>
                                 <div class="invalid-feedback">
@@ -121,11 +126,16 @@
                     <div class="form-group">
                         <label for="exampleFormControlSelect1">เลือกรายการของแจ้งซ่อม</label>
                         <select class="form-control" required id="equipments" name="equipments">
-                            <option selected disabled hidden value="">เลือกรายการของแจ้งซ่อม</option>
                             <% for(let i=0; i < equipments.length; i++) { %>
+                            <% if (equipments[i].id == repairs[0].room_id) { %>
+                            <option value="<%= equipments[i].id %>" selected>
+                                <%= equipments[i].equipment_name %>
+                            </option>
+                            <%} else { %>
                             <option value="<%= equipments[i].id %>">
                                 <%= equipments[i].equipment_name %>
                             </option>
+                            <% } %>
                             <% } %>
                         </select>
                         <div class="invalid-feedback">
@@ -134,14 +144,18 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">อื่นๆ</label>
+                        <% if (repairs[0].equipment_id != 5) { %>
                         <textarea class="form-control" rows="2" disabled id="other" name="other"></textarea>
+                        <%} else { %>
+                        <textarea class="form-control" rows="2" id="other" name="other"><%= repairs[0].other %></textarea>
+                        <% } %>
                         <div class="invalid-feedback">
                             Please input.
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">รายละเอียดการเเจ้งซ่อม</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required name="details"></textarea>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required name="details"><%= repairs[0].details %></textarea>
                         <div class="invalid-feedback">
                             Please input.
                         </div>
@@ -151,20 +165,22 @@
                             <span class="input-group-text">Upload</span>
                         </div>
                         <div class="custom-file">
-                            <input type="file" class="custom-file-input" name="image" id="image" required>
+                            <input type="file" class="custom-file-input" name="image" id="image">
                             <label class="custom-file-label">Choose file</label>
                         </div>
                     </div>
                     <div class="form-group mt-3">
                         <button type="submit" class="btn btn-primary"><i class='bx bx-add-to-queue'></i>
-                            เพิ่มรายการเเจ้งซ่อม</button>
+                            แก้ใขรายการเเจ้งซ่อม</button>
                     </div>
                 </form>
+
                 <% if (locals.addRepair_errors) { addRepair_errors.forEach(function(error_msg){ %>
                 <div class="alert alert-danger" role="alert">
                     <%= error_msg %>
                 </div>
                 <% }); } %>
+                <img src="../../uploads/<%= repairs[0].img %>" alt="" class="img-thumbnail">
                 <script>
                     // Example starter JavaScript for disabling form submissions if there are invalid fields
                     (function() {
