--- a/views/repair/index.ejs
+++ b/views/repair/index.ejs
@@ -87,7 +87,7 @@
                                         <% } %>
                                     </td>
                                     <td>
-                                        <a href="../repair/detalis/<%= data[i].id %>" class="btn btn-primary"><i class='bx bx-detail' ></i></a>
+                                        <!-- <a href="../repair/detalis/<%= data[i].id %>" class="btn btn-primary"><i class='bx bx-detail' ></i></a> -->
                                         <a href="../repair/edit/<%= data[i].id %>" class="btn btn-success"><i class='bx bx-edit'></i></a>
                                         <a href="../repair/delete/<%= data[i].id %>"
                                             onclick="return alert('Are you sure?')"
