--- a/views/home.ejs
+++ b/views/home.ejs
@@ -71,12 +71,14 @@
                             </td>
                             <td>
                                 <% if (data[i].status == 1) { %>
-                                <span class="badge badge-primary">เเจ้งซ่อม</span>
-                                <%} else if (data[i].status == 2) { %>
-                                <span class="badge badge-warning">เเจ้งซ่อม</span>
-                                <%} else if (data[i].status == 2) { %>
-                                <span class="badge badge-success">ซ่อมเสร็จสิ้น</span>
-                                <% } %>
+                                    <span class="badge badge-primary">เเจ้งซ่อม</span>
+                                    <%} else if (data[i].status == 2) { %>
+                                    <span class="badge badge-warning">กำลังซ่อม</span>
+                                    <%} else if (data[i].status == 3) { %>
+                                    <span class="badge badge-success">ซ่อมเสร็จสิ้น</span>
+                                    <%} else if (data[i].status == 5) { %>
+                                    <span class="badge badge-danger">ยกเลิกการเเจ้งซ่อม</span>
+                                    <% } %>
                             </td>
                             <td>
                                 <% if (data[i].equipment_id != 5) { %>
@@ -88,7 +90,9 @@
                             <td>
                                 <!-- <a href="../repair/detalis/<%= data[i].repair_id %>" class="btn btn-primary"><i class='bx bx-detail'></i></a> -->
                                 <a href="../repair/edit/<%= data[i].repair_id %>" class="btn btn-success"><i class='bx bx-edit'></i></a>
-                                <a href="../repair/delete/<%= data[i].repair_id %>" onclick="return alert('Are you sure?')" class="btn btn-danger"><i class='bx bx-trash'></i></a>
+                                <form method="POST" action="repair/delete/<%= data[i].repair_id %>?_method=DELETE" class="d-inline">
+                                    <button type="submit" onclick="return confirm('Are you sure you want to delete ?')"class="btn btn-danger"><i class='bx bx-trash'></i></button>
+                                </form>
                             </td>
                         </tr>
                         <% } %>
