Insert status repair success and confirm repair sucess

--- a/views/repair/index.ejs
+++ b/views/repair/index.ejs
@@ -200,6 +200,8 @@
                                     <%} else if (data[i].status == 2) { %>
                                     <span class="badge bg-warning text-dark">กำลังซ่อม</span>
                                     <%} else if (data[i].status == 3) { %>
+                                    <span class="badge bg-success">รอยืนยันซ่อมเสร็จสิ้น</span>
+                                    <%} else if (data[i].status == 4) { %>
                                     <span class="badge bg-success">ซ่อมเสร็จสิ้น</span>
                                     <%} else if (data[i].status == 5) { %>
                                     <span class="badge bg-danger">ยกเลิกการเเจ้งซ่อม</span>
