--- a/views/repair/edit.ejs
+++ b/views/repair/edit.ejs
@@ -150,10 +150,12 @@
                             Please input.
                         </div>
                     </div>
+                    <% if (role == 0) { %>
                     <div class="mb-3">
                         <label for="formFile" class="form-label">Choose file</label>
                         <input class="form-control" type="file" name="image" id="image">
                     </div>
+                    <% } %>
                     <% if (repairs[0].status == 1) { %>
                     <div class="mb-3 d-inline">
                         <button type="submit" class="btn btn-primary"><i class='bx bx-add-to-queue'></i>
@@ -163,43 +165,49 @@
                 </form>
 
                 <span>
-                    <% if (repairs[0].status == 1 && role == 1) { %>
+                    <% if (repairs[0].status == 1 || repairs[0].status == 2 && role == 1) { %>
                     <hr>
                     <form action="/repair/repairmans/<%= repairs[0].repair_id %>" method="POST" class="needs-validation mb-3" novalidate>
                         <div class="mb-3">
                             <select class="form-select" name="repairman" required>
                                 <% if (repairs[0].repairman_id != null) { %>
-                                    <% for(let i=0; i < repairmans.length; i++) { %>
-                                        <% if (repairmans[i].id == repairs[0].repairman_id) { %>
-                                            <option value="<%= repairmans[i].id %>" selected>
-                                                <%= repairmans[i].repairman_name %>
-                                            </option>
-                                        <%} else { %>
-                                            <option value="<%= repairmans[i].id %>">
-                                                <%= repairmans[i].repairman_name %>
-                                            </option>
-                                        <% } %>
-                                    <% } %>
-                                    <input type="submit" class="btn btn-primary mt-3" value="แก้ใขช่างซ่อม">
+                                <% for(let i=0; i < repairmans.length; i++) { %>
+                                <% if (repairmans[i].id == repairs[0].repairman_id) { %>
+                                <option value="<%= repairmans[i].id %>" selected>
+                                    <%= repairmans[i].repairman_name %>
+                                </option>
                                 <%} else { %>
-                                    <option hidden value="">เลือกช่างซ่อม</option>
-                                    <% for(let i=0; i < repairmans.length; i++) { %>
-                                        <option value="<%= repairmans[i].id %>">
-                                            <%= repairmans[i].repairman_name %>
-                                        </option>
-                                    <% } %>
-                                    <input type="submit" class="btn btn-primary mt-3" value="เพิ่มช่างซ่อม">
+                                <option value="<%= repairmans[i].id %>">
+                                    <%= repairmans[i].repairman_name %>
+                                </option>
+                                <% } %>
+                                <% } %>
+                                <input type="submit" class="btn btn-primary mt-3" value="แก้ใขช่างซ่อม">
+                                <%} else { %>
+                                <option hidden value="">เลือกช่างซ่อม</option>
+                                <% for(let i=0; i < repairmans.length; i++) { %>
+                                <option value="<%= repairmans[i].id %>">
+                                    <%= repairmans[i].repairman_name %>
+                                </option>
+                                <% } %>
+                                <input type="submit" class="btn btn-primary mt-3" value="เพิ่มช่างซ่อม">
                                 <% } %>
                             </select>
                             <div class="invalid-feedback">
                                 Please input.
                             </div>
                         </div>
-                       
+
                     </form>
                     <!-- <a class="btn btn-primary">รับงานซ่อม</a> -->
-                    <%} else if(repairs[0].status == 2 && role == 1) { %>
-                    <a href="#" class="btn btn-success">ซ่อมเสร็จสิ้น</a>
+                    <%} else if(repairs[0].status == 3 && role == 1) { %>
+                    <form method="POST" action="/repairman/confirmrepairsuccess/<%= repairs[0].repair_id %>" class="d-inline">
+                        <button type="submit" onclick="return confirm('Are you sure you want to repair confirm success ?')" class="btn btn-success">ยืนยันการซ่อมเสร็จสิ้น</button>
+                    </form>
+                    <%} else if(repairs[0].status == 2 && role == 2) { %>
+                    <form method="POST" action="/repairman/repairsuccess/<%= repairs[0].repair_id %>" class="d-inline">
+                        <button type="submit" onclick="return confirm('Are you sure you want to repair success ?')" class="btn btn-success">ซ่อมเสร็จสิ้น</button>
+                    </form>
                     <% } %>
                 </span>
             </div>
