--- a/views/repairman.ejs
+++ b/views/repairman.ejs
@@ -158,10 +158,10 @@
 <body>
     <section class="container" style="margin-top: 50px;">
         <div class="d-flex justify-content-between align-items-center">
-            <h2>Hello User : <%= name %></h2>
+            <h2>Hello Repairman : <%= name %></h2>
         </div>
-        <h2>รายการแจ้งซ่อมของฉัน</h2>
-        <a href="/repair/add" class="btn btn-primary"><i class='bx bx-add-to-queue'></i> เพิ่มรายการเเจ้งซ่อม</a>
+        <h2>รายการแจ้งซ่อม</h2>
+        <!-- <a href="/repair/add" class="btn btn-primary"><i class='bx bx-add-to-queue'></i> เพิ่มรายการเเจ้งซ่อม</a> -->
         <a href="/logout" class="btn btn-danger text-light"><i class='bx bx-log-out'></i> Logout</a>
         <div>
             <div class="table100 ver2 mb-4 mt-4">
@@ -174,7 +174,7 @@
                                 <th style="width: 10%">ชื่อ-นามสกุล</th>
                                 <th style="width: 10%">สถานะ</th>
                                 <th style="width: 10%">สิ่งของแจ้งซ่อม</th>
-                                <th style="width: 20%">แก้ใข/ลบ</th>
+                                <th style="width: 20%">รายละเอียด</th>
                             </tr>
                         </thead>
                     </table>
@@ -200,8 +200,6 @@
                                     <%} else if (data[i].status == 2) { %>
                                     <span class="badge bg-warning text-dark">กำลังซ่อม</span>
                                     <%} else if (data[i].status == 3) { %>
-                                    <span class="badge bg-success">รอยืนยันซ่อมเสร็จสิ้น</span>
-                                    <%} else if (data[i].status == 4) { %>
                                     <span class="badge bg-success">ซ่อมเสร็จสิ้น</span>
                                     <%} else if (data[i].status == 5) { %>
                                     <span class="badge bg-danger">ยกเลิกการเเจ้งซ่อม</span>
@@ -216,9 +214,6 @@
                                 </td>
                                 <td style="width: 20%">
                                     <a href="../repair/edit/<%= data[i].repair_id %>" class="btn btn-success"><i class='bx bx-edit'></i></a>
-                                    <form method="POST" action="repair/delete/<%= data[i].repair_id %>?_method=DELETE" class="d-inline">
-                                        <button type="submit" onclick="return confirm('Are you sure you want to delete ?')" class="btn btn-danger"><i class='bx bx-trash'></i></button>
-                                    </form>
                                 </td>
                             </tr>
                             <% } %>
