--- a/views/repairman.ejs
+++ b/views/repairman.ejs
@@ -196,14 +196,16 @@
                                 </td>
                                 <td style="width: 10%">
                                     <% if (data[i].status == 1) { %>
-                                    <span class="badge bg-info text-dark">เเจ้งซ่อม</span>
-                                    <%} else if (data[i].status == 2) { %>
-                                    <span class="badge bg-warning text-dark">กำลังซ่อม</span>
-                                    <%} else if (data[i].status == 3) { %>
-                                    <span class="badge bg-success">ซ่อมเสร็จสิ้น</span>
-                                    <%} else if (data[i].status == 5) { %>
-                                    <span class="badge bg-danger">ยกเลิกการเเจ้งซ่อม</span>
-                                    <% } %>
+                                        <span class="badge bg-info text-dark">เเจ้งซ่อม</span>
+                                        <%} else if (data[i].status == 2) { %>
+                                        <span class="badge bg-warning text-dark">กำลังซ่อม</span>
+                                        <%} else if (data[i].status == 3) { %>
+                                        <span class="badge bg-success">รอยืนยันซ่อมเสร็จสิ้น</span>
+                                        <%} else if (data[i].status == 4) { %>
+                                        <span class="badge bg-success">ซ่อมเสร็จสิ้น</span>
+                                        <%} else if (data[i].status == 5) { %>
+                                        <span class="badge bg-danger">ยกเลิกการเเจ้งซ่อม</span>
+                                        <% } %>
                                 </td>
                                 <td style="width: 10%">
                                     <% if (data[i].equipment_id != 5) { %>
